--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   "license": "ISC",
   "dependencies": {
     "@googleapis/slides": "^1.2.0",
+    "@prisma/client": "^5.17.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "googleapis": "^140.0.1",
-    "typescript": "^5.5.4",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/node": "^20.14.12",
-    "@types/uuid": "^10.0.0"
+    "@types/node": "^20.14.13",
+    "@types/uuid": "^10.0.0",
+    "prisma": "^5.17.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
   }
 }
