--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "googleapis": "^140.0.1",
+    "lodash": "^4.17.21",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^20.14.13",
     "@types/uuid": "^10.0.0",
     "prisma": "^5.17.0",
